Fix: z-index issue.
- Fix: z-index issue.

--- a/admin/app/src/assets/scss/layouts/_header.scss
+++ b/admin/app/src/assets/scss/layouts/_header.scss
@@ -6,7 +6,7 @@
 
     display: block;
     position: fixed;
-    z-index: 10000000000;
+    z-index: 1000; // Lower than dashboard menu dropdown.
     left: 180px;
     right: 20px;
     top: 40px;
